NEXUS-48722 replace dependency:nexus-platform-api (#56)